--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,9 @@
 spring.application.name=Oauth-login-app
 
 # google base login
-spring.security.oauth2.client.registration.google.client-id=243693438483-l4pt7ock0qpk9d2dmogavmdaku2uk0ov.apps.googleusercontent.com
-spring.security.oauth2.client.registration.google.client-secret=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
+spring.security.oauth2.client.registration.google.client-id=*******
+spring.security.oauth2.client.registration.google.client-secret=*******
 
 # Github
-spring.security.oauth2.client.registration.github.client-id=Ov23li5BKWemHwM45Met
-spring.security.oauth2.client.registration.github.client-secret=e16e212551a0bf2d8c367a0d5153c082f9372ab7
+spring.security.oauth2.client.registration.github.client-id=*******
+spring.security.oauth2.client.registration.github.client-secret=*******
